[project]
name = "fitcheck"
version = "0.1.0"
description = "A robust, scalable, and secure backend API for a fashion marketplace platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Flask and Extensions
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-jwt-extended>=4.7.1",
    "flask-migrate>=4.1.0",
    "flask-socketio==5.3.6",
    "flask-cors>=5.0.1",
    "flask-mail==0.10.0",
    "flask-limiter==3.5.0",

    # Database and Caching
    "psycopg2-binary==2.9.9",
    "redis==6.2.0",
    "celery==5.3.6",

    # AI and ML
    "langchain==0.3.25",
    "langchain-google-genai==2.1.5",
    "google-generativeai==0.8.5",
    "faiss-cpu==1.7.4",

    # Storage and Search
    "boto3==1.34.34",
    "google-cloud-storage==3.1.0",
    "google-cloud-vision==3.5.0",
    "algoliasearch==4.0.0",

    # Image Processing
    "pillow==10.2.0",
    "python-magic==0.4.27",
    "cloudinary>=1.41.0",
    "colorthief>=0.2.1",

    # Testing and Monitoring
    "pytest==8.0.0",
    "pytest-cov==4.1.0",
    "sentry-sdk==1.39.1",

    # Server and Utils
    "gunicorn==21.2.0",
    "eventlet==0.40.0",
    "python-jose==3.5.0",
    "bcrypt==4.1.2",
    "python-dotenv==1.0.1",

    # Additional dependencies
    "black==25.1.0",
    "flake8==7.0.0",
    "replicate==1.0.6",
    "resend>=2.10.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "pillow>=11.2.1",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "replicate>=1.0.6",
    "requests>=2.32.3",
]
