[project]
name = "fitcheck"
version = "0.1.0"
description = "A robust, scalable, and secure backend API for a fashion marketplace platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Flask and Extensions
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-jwt-extended>=4.7.1",
    "flask-migrate>=4.1.0",
    "flask-socketio==5.3.6",
    "flask-cors>=5.0.1",
    "flask-mail==0.10.0",
    "flask-limiter==3.5.0",
    # Database and Caching
    "psycopg2-binary>=2.9.10",
    "redis==6.2.0",
    "celery==5.3.6",
    # AI and ML
    "langchain==0.0.310",
    "langchain-google-genai==0.0.6",
    "google-generativeai==0.3.2",
    # Storage and Search
    "boto3==1.34.34",
    "google-cloud-storage==3.1.0",
    "google-cloud-vision==3.5.0",
    "algoliasearch==4.0.0",
    # Image Processing
    "pillow>=11.2.1",
    "python-magic==0.4.27",
    "cloudinary>=1.41.0",
    "colorthief>=0.2.1",
    # Testing and Monitoring
    "pytest==8.0.0",
    "pytest-cov==4.1.0",
    "sentry-sdk==1.39.1",
    # Server and Utils
    "gunicorn>=23.0.0",
    "eventlet==0.40.0",
    "python-jose==3.5.0",
    "bcrypt==4.1.2",
    "python-dotenv>=1.1.0",
    # Additional dependencies
    "black==25.1.0",
    "flake8==7.0.0",
    "replicate>=1.0.6",
    "resend>=2.10.0",
    "requests>=2.32.3",
    "pymongo>=4.13.0",
    "cryptography>=45.0.3",
    "bitnob>=1.3.2",
    "flask-pymongo>=3.0.1",
    "flask-mongoengine>=1.0.0",
    "google-genai>=1.4.0",
]
